Release v0.3.6
